@@ -1,6 +1,9 @@
                     Changes made to Pyjamas since 0.6
                     ---------------------------------
 
+ * Added insertItem to Tree, TreeItem and RootTreeItem and demo in
+   KitchenSink Trees.py (thanks to Carl Roach)
+
  * Added arguments for instance initialization in jsObjectToPyObject
 
  * Implemented NotImplementedType and NotImplemented
